kubernetes/apps/observability/grafana/instance/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      dns:
        query-name: grafana.g-eye.io
        query-type: A
      url: 1.1.1.1
spec:
  hostnames:
    - grafana.g-eye.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana-service
          port: 3000
